可以兼容data格式的数据自动检测，不用再将内容转成标准json格式

--- a/Api/test_case/test.yaml
+++ b/Api/test_case/test.yaml
@@ -2,7 +2,7 @@ name: test
 url: inspectionmanagement/inspectionItem/asyQuery
 meth: POST/json
 params:
-  inspectionTemplate:
-    id: 0bebd17597b14ecd82197696e8520174
-  itemContent: ''
+  username: sheshi504
+  password: Caini123
+  isOriginLogin: 'true'
 
